--- a/win32+openssl/keyconv/keyconv.vcxproj.filters
+++ b/win32+openssl/keyconv/keyconv.vcxproj.filters
@@ -37,7 +37,7 @@
     <ClInclude Include="..\..\src\bin\common\library.h">
       <Filter>Common Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\bin\keyconv\softhsm-keyconv.h">
+    <ClInclude Include="..\..\src\bin\keyconv\softhsm2-keyconv.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\config.h">
@@ -48,10 +48,10 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\src\bin\keyconv\softhsm-keyconv.cpp">
+    <ClCompile Include="..\..\src\bin\keyconv\softhsm2-keyconv.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\bin\keyconv\softhsm-keyconv-ossl.cpp">
+    <ClCompile Include="..\..\src\bin\keyconv\softhsm2-keyconv-ossl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\bin\common\getpw.cpp">
