--- a/win32+openssl/util/util.vcxproj.filters
+++ b/win32+openssl/util/util.vcxproj.filters
@@ -37,10 +37,10 @@
     <ClInclude Include="..\..\src\bin\common\library.h">
       <Filter>Common Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\bin\util\softhsm-util.h">
+    <ClInclude Include="..\..\src\bin\util\softhsm2-util.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\bin\util\softhsm-util-ossl.h">
+    <ClInclude Include="..\..\src\bin\util\softhsm2-util-ossl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\lib\cryptoki_compat\pkcs11.h">
@@ -57,10 +57,10 @@
     <ClCompile Include="..\..\src\bin\common\library.cpp">
       <Filter>Common Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\bin\util\softhsm-util.cpp">
+    <ClCompile Include="..\..\src\bin\util\softhsm2-util.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\bin\util\softhsm-util-ossl.cpp">
+    <ClCompile Include="..\..\src\bin\util\softhsm2-util-ossl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\bin\win32\getopt.cpp">
