--- a/src/lib/test/Makefile.am
+++ b/src/lib/test/Makefile.am
@@ -28,4 +28,5 @@ p11test_LDFLAGS = 		@CRYPTO_LIBS@ -no-install `cppunit-config --libs` -pthread -
 TESTS = 			p11test
 
 EXTRA_DIST =			$(srcdir)/*.h \
+				$(srcdir)/softhsm2.conf.win32 \
 				$(srcdir)/tokens/dummy.in
