--- a/src/lib/test/Makefile.am
+++ b/src/lib/test/Makefile.am
@@ -17,6 +17,7 @@ p11test_SOURCES =		p11test.cpp \
 				TokenTests.cpp \
 				UserTests.cpp \
 				ObjectTests.cpp \
+				DeriveTests.cpp \
 				SignVerifyTests.cpp \
 				AsymEncryptDecryptTests.cpp \
 				AsymWrapUnwrapTests.cpp \
