--- a/win32+openssl/convarch/convarch.vcxproj.filters
+++ b/win32+openssl/convarch/convarch.vcxproj.filters
@@ -152,6 +152,9 @@
     <ClInclude Include="..\..\src\lib\crypto\MacAlgorithm.h">
       <Filter>Crypto Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\lib\crypto\odd.h">
+      <Filter>Crypto Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\src\lib\crypto\OSSLAES.h">
       <Filter>Crypto Header Files</Filter>
     </ClInclude>
