--- a/win32+openssl/p11test/p11test.vcxproj
+++ b/win32+openssl/p11test/p11test.vcxproj
@@ -55,7 +55,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>..\$(Configuration);..\..\..\cu\lib;..\..\..\ssl\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\$(Configuration);..\..\..\cu\lib;..\..\..\ssl+dbg\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>convarch.lib;cppunitd.lib;libeay32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
@@ -106,6 +106,7 @@ copy ..\..\src\lib\test\tokens\dummy.in  ..\..\"win32+openssl"\p11test\tokens\du
     <ClInclude Include="..\..\src\lib\P11Objects.h" />
     <ClInclude Include="..\..\src\lib\SoftHSM.h" />
     <ClInclude Include="..\..\src\lib\test\AsymEncryptDecryptTests.h" />
+    <ClInclude Include="..\..\src\lib\test\AsymWrapUnwrapTests.h" />
     <ClInclude Include="..\..\src\lib\test\DigestTests.h" />
     <ClInclude Include="..\..\src\lib\test\InfoTests.h" />
     <ClInclude Include="..\..\src\lib\test\InitTests.h" />
@@ -126,6 +127,7 @@ copy ..\..\src\lib\test\tokens\dummy.in  ..\..\"win32+openssl"\p11test\tokens\du
     <ClCompile Include="..\..\src\lib\P11Objects.cpp" />
     <ClCompile Include="..\..\src\lib\SoftHSM.cpp" />
     <ClCompile Include="..\..\src\lib\test\AsymEncryptDecryptTests.cpp" />
+    <ClCompile Include="..\..\src\lib\test\AsymWrapUnwrapTests.cpp" />
     <ClCompile Include="..\..\src\lib\test\DigestTests.cpp" />
     <ClCompile Include="..\..\src\lib\test\InfoTests.cpp" />
     <ClCompile Include="..\..\src\lib\test\InitTests.cpp" />
