Allow reading configuration file from user's home directory
That allows normal users to take advantage of softhsm without
requiring an environment variable to be present for HSM
operations.

--- a/configure.ac
+++ b/configure.ac
@@ -124,6 +124,9 @@ softhsmtokendir=${full_localstatedir}/lib/softhsm/tokens/
 full_libdir="$full_libdir/softhsm"
 libdir=$full_libdir
 
+# For getConfigPath()
+AC_CHECK_FUNCS([getpwuid_r])
+
 # Define some variables for the code
 AC_DEFINE_UNQUOTED(
 	[VERSION_MAJOR],
